; ModuleID = '/home/carl/AnghaBench/openssl/crypto/des/extr_rand_key.c_DES_random_key.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/des/extr_rand_key.c_DES_random_key.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DES_random_key(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  br label %4

4:                                                ; preds = %11, %1
  %5 = load i32*, i32** %3, align 8
  %6 = bitcast i32* %5 to i8*
  %7 = call i32 @RAND_priv_bytes(i8* %6, i32 4)
  %8 = icmp ne i32 %7, 1
  br i1 %8, label %9, label %10

9:                                                ; preds = %4
  store i32 0, i32* %2, align 4
  br label %18

10:                                               ; preds = %4
  br label %11

11:                                               ; preds = %10
  %12 = load i32*, i32** %3, align 8
  %13 = call i64 @DES_is_weak_key(i32* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %4, label %15

15:                                               ; preds = %11
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @DES_set_odd_parity(i32* %16)
  store i32 1, i32* %2, align 4
  br label %18

18:                                               ; preds = %15, %9
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @RAND_priv_bytes(i8*, i32) #1

declare dso_local i64 @DES_is_weak_key(i32*) #1

declare dso_local i32 @DES_set_odd_parity(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
